<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Box</string>
    <string name="send">Send SMS</string>
    <string name="action_settings">Settings</string>
    <string name="say">Read it</string>
    <string name="record">Record it</string>
    <string name="message_title">SMS message</string>
    <string name="message">Hello! How are you?</string>
    <string name="mobile_number_title">Mobile number:</string>
    <string name="mobile_number"></string>
    <string name="delivered_msg1">The message has succeccful  send to the mobile network provider</string>
    <string name="delivered_msg2">The message delivered to the address</string>
    <string name="location_title">Our actual location:</string>
    <string name="next">Map</string>
    <string name="back">Back</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sms_not_sent">SMS sending failed</string>
    <string name="sms_sent">SMS sent</string>
    <string name="sms_text_title">SMS message:</string>
    <string name="title_activity_map_view">Map</string>
    <string name="valid_number">Please enter a valid phone number</string>
    <string name="network_problem">Network connection error</string>
</resources>
