<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:id="@+id/relativelayout">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:overScrollMode="always"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true">


            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/say"
                    android:focusable="true"
                    android:id="@+id/say" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record"
                    android:id="@+id/record" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout10"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true"
                >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:transitionGroup="false">


                <LinearLayout
                    android:id="@+id/LinearLayout"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:weightSum="1">


                    <Button
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:id="@+id/send"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message_title"
                        android:id="@+id/title2"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:text="@string/message"
                        android:id="@+id/edit"
                        android:layout_gravity="left|top"
                        android:background="#0066CC"
                        android:textColor="#FFFFFF"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number_title"
                    android:id="@+id/title3"
                    android:layout_gravity="left|top"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:id="@+id/edit2"
                    android:layout_below="@+id/LinearLayout"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="left|top"
                    android:layout_alignParentEnd="true"
                    android:phoneNumber="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />



                <LinearLayout
                    android:id="@+id/LinearLayout11"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_title"
                        android:id="@+id/location_title"
                        android:gravity="left"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:id="@+id/location"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp" />

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:id="@+id/next"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
